Update margin on the 6th menu item to prevent logo overlapping

--- a/_includes/_sass/includes/_header.scss
+++ b/_includes/_sass/includes/_header.scss
@@ -75,7 +75,7 @@
 				text-align: center;
 
 				li:nth-child(6) {
-					margin-right: 110px;
+					margin-right: 125px;
 				}
 			}
 
